# rizz-qa-tests

./: .gitignore  AGENTS.md  CLAUDE.md  IDENTITY.md  Makefile  SOUL.md  pyproject.toml  pytest.ini  requirements.txt
.openclaw/: workspace-state.json
memory/: 2025-02-17.md  2025-07-27.md  2026-02-24.md  skills.md
skills/semantic-memory/: SKILL.md
tests/: conftest.py  test_auth.py
tests/auth/: conftest.py  test_auth.py  test_auth_01_valid_login.py  test_auth_02_repeat_login.py  test_auth_03_session_reload.py  test_auth_03_unregistered_user.py  test_auth_04_empty_fields.py  test_auth_04_invalid_phone.py  test_auth_04_nonexistent_phone.py  test_auth_04_unregistered_user.py  test_auth_05_empty_fields.py  test_auth_05_invalid_phone.py  test_auth_05_nonexistent_phone.py  test_auth_06_empty_fields.py  test_auth_06_invalid_phone.py  test_auth_07_empty_phone.py  test_auth_08_empty_password.py  test_auth_09_invalid_phone.py  test_auth_10_clear_fields.py  test_auth_11_placeholder_visible.py  test_auth_12_phone_mask.py  test_auth_13_password_masked.py  test_auth_14_auto_prefix.py  test_auth_15_navigate_registration.py  test_auth_16_navigate_recover.py  test_auth_fields.py  test_auth_invalid.py  test_auth_navigation.py  test_auth_valid.py  test_auth_validation.py
tests/components/: base_component.py  notification.py  password_input.py  phone_input.py
tests/elements/: base_element.py  button.py  file_input.py  icon.py  image.py  input.py  link.py  text.py  textarea.py
tests/filters/: conftest.py  test_filters_01_search_input.py  test_filters_02_clear_search.py  (+7 more)
(+128 files in other folders)
