[project]
name = "rizz-qa-tests"
version = "0.1.0"
description = "QA автотесты для платформы rizz.market"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pytest-playwright",
    "playwright",
    "faker",
    "pytest-rerunfailures",
    "more-itertools>=10.8.0",
]


[tool.pytest.ini_options]
addopts = "-s -v --tb=short --headed --reruns=2 --reruns-delay=1 --only-rerun=TimeoutError --only-rerun=Error"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
markers = [
    "regression: Регрессионные тесты.",
    "regress_route: Упорядоченный маршрут полного регресса.",
    "authorization: Тесты авторизации.",
    "market: Тесты маркета блогера.",
    "filters: Тесты фильтрации на маркете.",
    "products: Тесты продуктов рекламодателя.",
    "campaigns: Тесты кампаний рекламодателя.",
    "responses: Тесты откликов блогера.",
    "integrations: Тесты выполнения интеграций блогера.",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
